1998-10-16  Yo Ric Dude  <ricdude@ix.netcom.com>

	* filter.c, mix.c, players.c: misc optimizations courtesy of Bibek.

	* audio_hpux.c: HP-UX patches courtest of Jimmy Olsen <jo@hrp.no>.
	It is claimed that esd now runs on HP-Ux

	* esd-server.h, esd.c, filter.c, players.c, proto.c: added support 
	for multiple simultaneous monitor streams.

Fri Oct 16 02:48:26 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.h: removed system includes so it doesn't "pollute"

	* audio.c, esd-server.h, esd.h, esdcat.c esdctl.c, esdfilt.c,
	esdloop.c, esdmon.c, esdplay.c, esdrec.c, esdsample.c: added
	in specifc #includes so it compiles again

1998-10-14  Yo Ric Dude  <ricdude@ix.netcom.com>

	* Makefile.am: esdctl now uses getopt_long, and therefore needs
	the LIBOBJS in it's LDADD.

	* esdctl.c: beefed up esdctl for industrial grade use.  added an
 	exit_usage function, and getopt style option parsing.  It was
 	destined to become esdsh, but this in combination with a real
 	scripting language should be suffient.

1998-10-13  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esdlib.c, proto.c: trap for NULL name sent to sample_getid(),
 	and check for sample names beyond the head of the list.

Mon Oct 12 23:12:03 CDT 1998 Frank Belew <frb@umr.edu>

	* esd.h: removed anything resembling a socket header
	* esd-server.h: added everything removed from esd.h
	* audio_alsa.c: #include esd.h instead of esd-server.h since sockets 
	are not needed.
	* esdlib.c: removed superfluous headers that are already included from
	esd-server.h

1998-10-10  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esd-server.h, esd.c, esd.h, esdlib.c, mix.c, proto.c, filter.c,
 	esdfilt.c Makefile.am, .cvsignore: filter patch courtesy of Bibek
 	Sahu. ten points to the first person to create esdequalizer. does
 	libgsl do digital filters?

Tue Oct  6 20:57:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.c: nanosleep in the no data ready case too, so we don't
	suck up CPU
