@@ -10,3 +10,4 @@
 #undef DRIVER_NEWALSA
 #undef DRIVER_NONE
 #undef HAVE_INET_ATON
+#undef HAVE_NANOSLEEP
