@@ -9,7 +9,7 @@
 #endif
 
 /* FreeBSD uses a different identifier? what other BSDs? */
-#ifdef FREEBSD
+#ifdef __FreeBSD__
 #define SNDCTL_DSP_SETDUPLEX DSP_CAP_DUPLEX
 #endif
 
