@@ -43,7 +43,8 @@ dnl Check for system libs needed
 
 AC_CHECK_FUNC(connect,,[AC_CHECK_LIB(socket,connect)])
 AC_CHECK_FUNC(gethostbyname,,[AC_CHECK_LIB(nsl,gethostbyname)])
-AC_CHECK_FUNC(nanosleep,,[AC_CHECK_LIB(posix4,nanosleep)])
+AC_CHECK_FUNC(nanosleep, AC_DEFINE(HAVE_NANOSLEEP),
+  [AC_CHECK_LIB(posix4,nanosleep,AC_DEFINE(HAVE_NANOSLEEP))])
 AC_CHECK_FUNC(inet_aton,,[AC_CHECK_LIB(resolv,inet_aton)])
 if test x$ac_cv_func_inet_aton = xno && test x$ac_cv_lib_resolv_inet_aton = xno 
 then :
